--- a/front-end/app/globals.css
+++ b/front-end/app/globals.css
@@ -1,8 +1,18 @@
 @import "tailwindcss";
 
+
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --blauw-logo: #02647e;
+}
+
+.text-blauw-logo {
+  color: var(--blauw-logo);
+}
+.hover\:text-blauw-logo:hover {
+  color: var(--blauw-logo);
 }
 
 @theme inline {
@@ -20,7 +30,8 @@
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: var(--foreground);
+  color: #4a4a4a;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
 }
