--- a/front-end/app/globals.css
+++ b/front-end/app/globals.css
@@ -14,6 +14,9 @@
 .hover\:text-blauw-logo:hover {
   color: var(--blauw-logo);
 }
+.bg-blauw-logo {
+  background-color: var(--blauw-logo);
+}
 
 @theme inline {
   --color-background: var(--background);
